--- a/LDA_paper/bib.bib
+++ b/LDA_paper/bib.bib
@@ -1,3 +1,11 @@
+@book{basseville1993detection,
+  title={Detection of abrupt changes: theory and application},
+  author={Basseville, Mich{\`e}le and Nikiforov, Igor V and others},
+  volume={104},
+  year={1993},
+  publisher={Prentice Hall Englewood Cliffs}
+}
+
 @article{fisher1936use,
   title={The use of multiple measurements in taxonomic problems},
   author={Fisher, Ronald A},
@@ -55,8 +63,8 @@
 
 @article{keren2014geometric,
   title={Geometric monitoring of heterogeneous streams},
-  author={Keren, Doron and Sagy, Guy and Abboud, Amir and Ben-David, David and Schuster, Assaf and Sharfman, Izchak and Deligiannakis, Antonios},
-  journal={Knowledge and Data Engineering, IEEE Transactions on},
+  author={Keren, Daniel and Sagy, Guy and Abboud, Amir and Ben-David, David and Schuster, Assaf and Sharfman, Izchak and Deligiannakis, Antonios},
+  journal={IEEE Transactions on Knowledge and Data Engineering},
   volume={26},
   number={8},
   pages={1890--1903},
@@ -67,7 +75,7 @@
 @inproceedings{michel2005klee,
   title={Klee: A framework for distributed top-k query algorithms},
   author={Michel, Sebastian and Triantafillou, Peter and Weikum, Gerhard},
-  booktitle={Proceedings of the 31st international conference on Very large data bases},
+  booktitle={Proceedings of the 31st International Conference on Very Large Databases},
   pages={637--648},
   year={2005},
   organization={VLDB Endowment}
@@ -76,7 +84,7 @@
 @inproceedings{shah2008handling,
   title={Handling non-linear polynomial queries over dynamic data},
   author={Shah, Shetal and Ramamritham, Krithi},
-  booktitle={Data Engineering, 2008. ICDE 2008. IEEE 24th International Conference on},
+  booktitle={IEEE 24th International Conference on Data Engineering (ICDE)},
   pages={1043--1052},
   year={2008},
   organization={IEEE}
@@ -85,10 +93,9 @@
 @inproceedings{huang2007communication,
   title={Communication-efficient online detection of network-wide anomalies},
   author={Huang, Ling and Nguyen, XuanLong and Garofalakis, Minos and Hellerstein, Joseph M and Jordan, Michael and Joseph, Anthony D and Taft, Nina and others},
-  booktitle={INFOCOM 2007. 26th IEEE International Conference on Computer Communications. IEEE},
+  booktitle={INFOCOM 2007. 26th IEEE International Conference on Computer Communications  (INFOCOM)},
   pages={134--142},
   year={2007},
-  organization={IEEE}
 }
 
 @article{sharfman2007geometric,
@@ -105,7 +112,7 @@
 @article{keren2012shape,
   title={Shape sensitive geometric monitoring},
   author={Keren, Daniel and Sharfman, Izchak and Schuster, Assaf and Livne, Avishay},
-  journal={Knowledge and Data Engineering, IEEE Transactions on},
+  journal={IEEE Transactions on Knowledge and Data Engineering},
   volume={24},
   number={8},
   pages={1520--1535},
@@ -127,16 +134,15 @@
 @inproceedings{kashyap2008efficient,
   title={Efficient constraint monitoring using adaptive thresholds},
   author={Kashyap, Srinivas and Ramamirtham, Jeyashankher and Rastogi, Rajeev and Shukla, Pushpraj},
-  booktitle={Data Engineering, 2008. ICDE 2008. IEEE 24th International Conference on},
+  booktitle={IEEE 24th International Conference on Data Engineering (ICDE)},
   pages={526--535},
   year={2008},
-  organization={IEEE}
 }
 
 @inproceedings{keralapura2006communication,
   title={Communication-efficient distributed monitoring of thresholded counts},
   author={Keralapura, Ram and Cormode, Graham and Ramamirtham, Jeyashankher},
-  booktitle={Proceedings of the 2006 ACM SIGMOD international conference on Management of data},
+  booktitle={Proceedings of the SIGMOD International Conference on Management of Data},
   pages={289--300},
   year={2006},
   organization={ACM}
@@ -145,7 +151,7 @@
 @inproceedings{wang2015concept,
   title={Concept drift detection for streaming data},
   author={Wang, Heng and Abraham, Zubin},
-  booktitle={Neural Networks (IJCNN), 2015 International Joint Conference on},
+  booktitle={International Joint Conference on Neural Networks (IJCNN) },
   pages={1--9},
   year={2015},
   organization={IEEE}
@@ -163,7 +169,7 @@
 @inproceedings{wang2013concept,
   title={Concept drift detection for online class imbalance learning},
   author={Wang, Shuo and Minku, Leandro L and Ghezzi, Diego and Caltabiano, Daniele and Tino, Peter and Yao, Xin},
-  booktitle={Neural Networks (IJCNN), The 2013 International Joint Conference on},
+  booktitle={International Joint Conference on Neural Networks (IJCNN)},
   pages={1--10},
   year={2013},
   organization={IEEE}
@@ -172,7 +178,7 @@
 @inproceedings{baena2006early,
   title={Early drift detection method},
   author={Baena-Garc{\i}a, Manuel and del Campo-{\'A}vila, Jos{\'e} and Fidalgo, Ra{\'u}l and Bifet, Albert and Gavalda, R and Morales-Bueno, R},
-  booktitle={Fourth international workshop on knowledge discovery from data streams},
+  booktitle={Fourth International Workshop on Knowledge Discovery from Data Streams},
   volume={6},
   pages={77--86},
   year={2006}
